; ModuleID = '/home/carl/AnghaBench/streem/src/extr_string.c_sym_hash.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_string.c_sym_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sym_key = type { i8*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @sym_hash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sym_hash(i8* %0, i32 %1) #0 {
  %3 = alloca %struct.sym_key, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = bitcast %struct.sym_key* %3 to { i8*, i32 }*
  %8 = getelementptr inbounds { i8*, i32 }, { i8*, i32 }* %7, i32 0, i32 0
  store i8* %0, i8** %8, align 8
  %9 = getelementptr inbounds { i8*, i32 }, { i8*, i32 }* %7, i32 0, i32 1
  store i32 %1, i32* %9, align 8
  %10 = getelementptr inbounds %struct.sym_key, %struct.sym_key* %3, i32 0, i32 0
  %11 = load i8*, i8** %10, align 8
  store i8* %11, i8** %4, align 8
  %12 = getelementptr inbounds %struct.sym_key, %struct.sym_key* %3, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  store i32 %13, i32* %6, align 4
  %14 = load i8*, i8** %4, align 8
  %15 = getelementptr inbounds i8, i8* %14, i32 1
  store i8* %15, i8** %4, align 8
  %16 = load i8, i8* %14, align 1
  %17 = sext i8 %16 to i32
  store i32 %17, i32* %5, align 4
  br label %18

18:                                               ; preds = %22, %2
  %19 = load i32, i32* %6, align 4
  %20 = add nsw i32 %19, -1
  store i32 %20, i32* %6, align 4
  %21 = icmp ne i32 %19, 0
  br i1 %21, label %22, label %32

22:                                               ; preds = %18
  %23 = load i32, i32* %5, align 4
  %24 = shl i32 %23, 5
  %25 = load i32, i32* %5, align 4
  %26 = sub nsw i32 %24, %25
  %27 = load i8*, i8** %4, align 8
  %28 = getelementptr inbounds i8, i8* %27, i32 1
  store i8* %28, i8** %4, align 8
  %29 = load i8, i8* %27, align 1
  %30 = sext i8 %29 to i32
  %31 = add nsw i32 %26, %30
  store i32 %31, i32* %5, align 4
  br label %18

32:                                               ; preds = %18
  %33 = load i32, i32* %5, align 4
  ret i32 %33
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
